# tallyfy

./: .gitignore  Cargo.toml  Dioxus.toml  deno.json  dev.ts  tailwind.config.cjs
.github/workflows/: rust-clippy.yml
src/: main.rs  models.rs
src/components/: counter.rs  list.rs  mod.rs  modal.rs  navbar.rs
