[package]
name = "tallyfy"
version = "0.1.0"
authors = ["martial-plains <41553768+martial-plains@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.6.3", features = ["desktop", "router"] }

# Debug
dioxus-logger = "0.6.0"
enum-iterator = "2.1.0"
uuid = { version = "1.13.1", features = ["v4"] }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
